[package]
name = "plugin-buildfile"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
hconfig = { package = "config", path = "../config" }
hcore = { package = "core", path = "../core" }
hmodel = { package = "model", path = "../model" }
hwalk = { package = "walk", path = "../walk" }
hproc = { package = "proc", path = "../proc" }
hplugin = { package = "plugin", path = "../plugin" }
hbuiltins = { package = "builtins", path = "../builtins" }
hplugin_query = { package = "plugin-query", path = "../plugin-query" }
hxstarlark_fmt = { package = "xstarlark-fmt", path = "../xstarlark-fmt" }
anyhow = "1.0.102"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.89"
futures = "0.3.32"
enclose = "1"
glob = "0.3"
starlark = "0.14.2"
starlark_lsp = "0.14.2"
allocative = "0.3"
lsp-server = "0.7"
lsp-types = "0.97"
tower-lsp-server = "0.22"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "io-std", "process", "fs"] }

[dev-dependencies]
serde_yaml = "0.9"
tempfile = "3"
