[package]
name = "plugin-exec"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
hcore = { package = "core", path = "../core" }
hmodel = { package = "model", path = "../model" }
hplugin = { package = "plugin", path = "../plugin" }
hproc = { package = "proc", path = "../proc" }
hdriver-support = { package = "driver-support", path = "../driver-support" }
plugin-sdk = { path = "../plugin-sdk" }
anyhow = "1.0.102"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.89"
glob = "0.3"
tar = "0.4"
libc = "0.2"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "std"] }
minijinja = "2"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "io-util", "io-std", "process", "macros", "sync", "signal", "fs", "net"] }

[features]
# shm transport (iceoryx2); opt-in (slower than proto here on macOS).
shm = ["plugin-sdk/shm"]

[[bin]]
name = "heph-plugin-exec"
path = "src/bin/heph-plugin-exec.rs"

[dev-dependencies]
enclose = "1"
serde_yaml = "0.9"
tempfile = "3"
