[package]
name = "plugin-gha"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
# The hook contract + option decoding — transport-agnostic, same as any plugin.
hplugin = { package = "plugin", path = "../plugin" }
hcore = { package = "core", path = "../core" }
anyhow = "1.0.102"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
serde_yaml = "0.9"
