[package]
name = "plugin-gha"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
# The hook contract + option decoding — transport-agnostic, same as any plugin.
hplugin = { package = "plugin", path = "../plugin" }
hcore = { package = "core", path = "../core" }
anyhow = "1.0.102"
tracing = "0.1"
# Live sticky-PR-comment updates over the GitHub REST API. Blocking client (the
# hook runs its updates on a plain thread, not an async runtime); rustls to match
# the other crates' reqwest config.
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls", "json"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
serde_yaml = "0.9"
