[package]
name = "plugin-nix"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
hcore = { package = "core", path = "../core" }
hmodel = { package = "model", path = "../model" }
hplugin = { package = "plugin", path = "../plugin" }
hproc = { package = "proc", path = "../proc" }
hdriver-support = { package = "driver-support", path = "../driver-support" }
anyhow = "1.0.102"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.89"
tar = "0.4"
xxhash-rust = { version = "0.8.15", features = ["xxh3", "std"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "io-util", "process", "macros", "sync", "fs"] }

[dev-dependencies]
tempfile = "3"
